--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet"
+          href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+
+    <script src="https://kit.fontawesome.com/259c7d997c.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
